<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            >
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/title"
                app:titleTextColor="@color/white">
            </androidx.appcompat.widget.Toolbar>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                style="?android:attr/borderlessButtonStyle"
                android:id="@+id/setting"
                tools:ignore="HardcodedText" />
        </RelativeLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/Posters"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize" />
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/grid_progressbar"
        android:visibility="invisible"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/NoINTERNET"
        android:layout_centerInParent="true"
        android:textStyle="bold"
        android:id="@+id/place_holder"
        android:visibility="gone"/>

</RelativeLayout>